[package]
name = "rust_twostack"
version = "0.1.0"
edition = "2021"
description = "Support for two-dimentional stacks for Rust"
license-file = "LICENSE"
homepage = "https://github.com/vulogov/rust_twostack"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nanoid = "0.4.0"
rust_dynamic = "0.3.0"
